--- a/styles/main.css
+++ b/styles/main.css
@@ -58,7 +58,7 @@ body {
 }
 
 .full-hide-line {
-  margin-bottom: 12px;
+  margin-bottom: 4px;
   display: flex;
   flex-direction: row;
   justify-content: left;
@@ -67,6 +67,18 @@ body {
 .full-hide-checkbox {
   margin-left: 0px;
 }
+
+.hide-no-companies-line {
+  margin-bottom: 12px;
+  display: flex;
+  flex-direction: row;
+  justify-content: left;
+}
+
+.hide-no-companies-checkbox {
+  margin-left: 0px;
+}
+
 
 .company-item {
   display: flex;
