--- a/styles/filtering-style.css
+++ b/styles/filtering-style.css
@@ -19,3 +19,25 @@
 
   background:rgb(255, 0, 0);
 }
+
+.filter-in-button {
+  background:rgb(113, 255, 113);
+  margin-left: 16px;
+  padding-left: 8px; 
+  padding-right: 8px; 
+
+  font-size: 12px;
+  font-weight: 600;
+
+  border-radius: 5px;
+
+  transition: background 0.15s, margin-left 0.15s, padding-left 0.15s, padding-right 0.15s;
+}
+
+.filter-in-button:hover {
+  margin-left: 12px;
+  padding-left: 12px; 
+  padding-right: 12px; 
+
+  background:rgb(0, 255, 0);
+}
