--- a/styles/filtering-style.css
+++ b/styles/filtering-style.css
@@ -1,43 +1,59 @@
-.filter-out-button {
-  background:rgb(255, 113, 113);
-  margin-left: 16px;
+.button-box {
+  display: inline-block;
+  width: fit-content;
+  margin-left: 4px;
+  margin-right: 4px;
+
+  transition: margin-left 0.15s, margin-right 0.15s;
+}
+
+.button-box:hover {
+  margin-left: 0px;
+  margin-right: 0px;
+}
+
+.button-box .filter-button,
+.button-box .favorite-button,
+.button-box .neutral-button {
+  width: max-content;
   padding-left: 8px; 
-  padding-right: 8px; 
+  padding-right: 8px;
 
   font-size: 12px;
   font-weight: 600;
 
   border-radius: 5px;
 
-  transition: background 0.15s, margin-left 0.15s, padding-left 0.15s, padding-right 0.15s;
+  transition: background 0.15s, padding-left 0.15s, padding-right 0.15s;
 }
 
-.filter-out-button:hover {
-  margin-left: 12px;
+.button-box:hover .filter-button,
+.button-box:hover .favorite-button,
+.button-box:hover .neutral-button {
   padding-left: 12px; 
-  padding-right: 12px; 
+  padding-right: 12px;
+}
 
+.filter-button {
+  background:rgb(255, 113, 113);
+}
+
+.filter-button:hover {
   background:rgb(255, 0, 0);
 }
 
-.filter-in-button {
+.favorite-button {
   background:rgb(113, 255, 113);
-  margin-left: 16px;
-  padding-left: 8px; 
-  padding-right: 8px; 
-
-  font-size: 12px;
-  font-weight: 600;
-
-  border-radius: 5px;
-
-  transition: background 0.15s, margin-left 0.15s, padding-left 0.15s, padding-right 0.15s;
 }
 
-.filter-in-button:hover {
-  margin-left: 12px;
-  padding-left: 12px; 
-  padding-right: 12px; 
-
+.favorite-button:hover { 
   background:rgb(0, 255, 0);
+}
+
+.neutral-button {
+  background:rgb(113, 113, 255);
+}
+
+.neutral-button:hover {
+  background:rgb(0, 0, 255);
 }
